# warmup-fir-filter

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.py  pipeline_fir_1d.py  pyproject.toml
01_fir_1d/docs/: fir_1d_golden_spec.md
01_fir_1d/model/cpp/: CMakeLists.txt  fir_1d_ref.cpp  fir_1d_ref.h  mycomplex.cpp
01_fir_1d/model/python/: fir_1d_fixed_ref.py  fir_1d_ref,py  fir_1d_ref.py
01_fir_1d/sim/: build
01_fir_1d/sim/test/: CMakeLists.txt  test_fir_1d_golden_hardcoded.py
10_warmup_fir_filter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fir_1d/: __init__.py
fir_1d/docs/: 2.16.md  RTL_fir_1d_spec.md  fir_1d_3tap_compare_analysis_v1.md  fir_1d_5tap_compare_analysis_v1.md  fir_1d_fixed_3tap_vs_5tap_comparison_v1.md  fir_1d_golden_spec.md  fir_1d_golden_spec_v1.md  fir_1d_ideal_spec_v1.md  main.cpp
fir_1d/model/: __init__.py
fir_1d/model/cpp/: CMakeLists.txt  fir_1d_ref.cpp
fir_1d/model/python/: __init__.py  fir_1d_fixed_ref.py  fir_1d_ref.py
fir_1d/sim/tests/: CMakeLists.txt  __init__.py  output_test_common.py  test_1d_fixed.py  test_1d_ideal.py  test_fir_1d_golden.cpp  test_fixed_output.py  test_ideal_ output.py
fir_1d/sim/vector/: case00_full_scale_impulse_x_u8.mem  case00_full_scale_impulse_y_u8.mem  case01_bankers_rounding_and_saturation_x_u8.mem  case01_bankers_rounding_and_saturation_y_u8.mem  case02_q17_boundary_taps_h_s8.mem  case02_q17_boundary_taps_x_u8.mem  case02_q17_boundary_taps_y_u8.mem  case03_general_nominal_h_s8.mem  case03_general_nominal_x_u8.mem  (+12 more)
fir_2d/sim/: build
lib/: CMakeLists.txt  mycomplex.h
(+14 files in other folders)
